Finished with the logic of the application

--- a/src/App.css
+++ b/src/App.css
@@ -105,4 +105,13 @@
   .hdul {
     padding-top: 0;
   }
+
+  .navbar-nav {
+    align-items: start !important;
+    justify-content: space-between;
+  }
+  
+  .mbr {
+    padding-bottom: 5px;
+  }
 }
